--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,24 @@ services:
       - local
     restart: always
 
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: "llm_engineering_qdrant"
+    ports:
+      - 6333:6333
+      - 6334:6334
+    expose:
+      - 6333
+      - 6334
+    volumes:
+      - qdrant_data:/qdrant/storage:z
+    networks:
+      - local
+    restart: always
+
 volumes:
   mongo_data:
+  qdrant_data:
 
 networks:
   local:
