feat: Add RAG retriever

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-DATABASE_HOST=mongodb://decodingml:decodingml@decodingml_mongo:27017
-DATABASE_NAME=twin
+DATABASE_HOST = "mongodb://decodingml:decodingml@decodingml_mongo:27017"
+DATABASE_NAME = "twin"
 
 # LinkedIn Credentials
-LINKEDIN_USERNAME=str
-LINKEDIN_PASSWORD=str
+LINKEDIN_USERNAME = "str"
+LINKEDIN_PASSWORD = "str"
+
+# OpenAI API Config
+OPENAI_MODEL_ID = "gpt-3.5-turbo"
+OPENAI_API_KEY = "str"
