--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pymongo = "^4.6.2"
 pydantic = "^1.9.0"
 click = "^8.0.1"
 loguru = "^0.7.2"
+rich = "^13.7.1"
 numpy = "^1.26.4"
 
 # Digital data ETL
@@ -27,6 +28,9 @@ unstructured = "^0.12.0"
 langchain = "^0.1.13"
 sentence-transformers = "^2.6.1"
 instructorembedding = "^1.0.1"
+
+# RAG
+langchain-openai = "^0.1.3"
 
 [build-system]
 requires = ["poetry-core"]
