--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 # Pipelines
-run-digital-data-etl = "python -m llm_engineering.run --run-etl"
-run-feature-engineering-pipeline = "python -m llm_engineering.run --run-feature-engineering"
-run-created-dataset-pipeline = "python -m llm_engineering.run --run-create-dataset"
+run-digital-data-etl = "python -m llm_engineering.interfaces.orchestrator.run --run-etl"
+run-feature-engineering-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --run-feature-engineering"
+run-created-dataset-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --run-create-dataset"
 
 # Local infrastructure
 
