--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ sentence-transformers = "^2.6.1"
 
 # RAG
 langchain-openai = "^0.1.3"
+jinja2 = "^3.1.4"
+tiktoken = "^0.7.0"
 
 [build-system]
 requires = ["poetry-core"]
