feat: Finish instruct dataset generation flow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   mongo:
     image: mongo
     container_name: "llm_engineering_mongo"
+    platform: linux/amd64
     logging:
       options:
         max-size: 1g
@@ -21,6 +22,7 @@ services:
   qdrant:
     image: qdrant/qdrant:latest
     container_name: "llm_engineering_qdrant"
+    platform: linux/amd64
     ports:
       - 6333:6333
       - 6334:6334
