feat: Crawl custom blogs. Add links to all of us

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-DATABASE_HOST = "mongodb://decodingml:decodingml@decodingml_mongo:27017"
+# MongoDB Config
+DATABASE_HOST = "mongodb://decodingml:decodingml@127.0.0.1:27017"
 DATABASE_NAME = "twin"
+
+# Selenium Config
+SELENIUM_BROWSER_DRIVER_PATH = "str"
 
 # LinkedIn Credentials
 LINKEDIN_USERNAME = "str"
