--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ sentence-transformers = "^2.6.1"
 langchain-openai = "^0.1.3"
 jinja2 = "^3.1.4"
 tiktoken = "^0.7.0"
+fake-useragent = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.9"
@@ -47,9 +48,15 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 # Pipelines
-run-digital-data-etl = "python -m llm_engineering.interfaces.orchestrator.run --run-etl"
+run-digital-data-etl-alex = "python -m llm_engineering.interfaces.orchestrator.run --run-etl --etl-config-filename digital_data_etl_alex_vesa.yaml"
+run-digital-data-etl-maxime = "python -m llm_engineering.interfaces.orchestrator.run --run-etl --etl-config-filename digital_data_etl_maxime_labonne.yaml"
+run-digital-data-etl-paul = "python -m llm_engineering.interfaces.orchestrator.run --run-etl --etl-config-filename digital_data_etl_paul_iusztin.yaml"
+run-digital-data-etl = ["run-digital-data-etl-alex", "run-digital-data-etl-maxime", "run-digital-data-etl-paul"]
+
 run-feature-engineering-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --run-feature-engineering"
-run-created-dataset-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --run-create-dataset"
+run-generate-instruct-datasets-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --run-generate-instruct-datasets"
+run-preprocessing-pipeline = ["run-digital-data-etl", "run-feature-engineering-pipeline", "run-generate-instruct-datasets-pipeline"]
+
 run-training-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --run-training"
 
 # Local infrastructure
