docs: Fill README

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ LINKEDIN_PASSWORD = "str"
 # OpenAI API Config
 OPENAI_MODEL_ID = "gpt-3.5-turbo"
 OPENAI_API_KEY = "str"
+
+# RAG
+RAG_MODEL_DEVICE = "cpu"
