--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,21 +51,36 @@ build-backend = "poetry.core.masonry.api"
 run-digital-data-etl-alex = "python -m llm_engineering.interfaces.orchestrator.run --run-etl --no-cache --etl-config-filename digital_data_etl_alex_vesa.yaml"
 run-digital-data-etl-maxime = "python -m llm_engineering.interfaces.orchestrator.run --run-etl --no-cache --etl-config-filename digital_data_etl_maxime_labonne.yaml"
 run-digital-data-etl-paul = "python -m llm_engineering.interfaces.orchestrator.run --run-etl --no-cache --etl-config-filename digital_data_etl_paul_iusztin.yaml"
-run-digital-data-etl = ["run-digital-data-etl-alex", "run-digital-data-etl-maxime", "run-digital-data-etl-paul"]
+run-digital-data-etl = [
+    "run-digital-data-etl-alex",
+    "run-digital-data-etl-maxime",
+    "run-digital-data-etl-paul",
+]
 
 run-feature-engineering-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --no-cache --run-feature-engineering"
 run-generate-instruct-datasets-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --no-cache --run-generate-instruct-datasets"
-run-preprocessing-pipeline = ["run-digital-data-etl", "run-feature-engineering-pipeline", "run-generate-instruct-datasets-pipeline"]
+run-preprocessing-pipeline = [
+    "run-digital-data-etl",
+    "run-feature-engineering-pipeline",
+    "run-generate-instruct-datasets-pipeline",
+]
 run-export-artifact-to-json-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --no-cache --run-export-artifact-to-json"
 
 run-training-pipeline = "python -m llm_engineering.interfaces.orchestrator.run --no-cache --run-training"
 
 # Local infrastructure
-local-docker-infrastructure-up = "docker-compose up -d"
-local-docker-infrastructure-down = "docker-compose stop"
+local-docker-infrastructure-up = "docker compose up -d"
+local-docker-infrastructure-down = "docker compose stop"
 local-zenml-server-down = "poetry run zenml down"
-local-infrastructure-up = ["local-docker-infrastructure-up", "local-zenml-server-down", "local-zenml-server-up"]
-local-infrastructure-down = ["local-docker-infrastructure-down", "local-zenml-server-down"]
+local-infrastructure-up = [
+    "local-docker-infrastructure-up",
+    "local-zenml-server-down",
+    "local-zenml-server-up",
+]
+local-infrastructure-down = [
+    "local-docker-infrastructure-down",
+    "local-zenml-server-down",
+]
 
 # QA
 lint-check = "poetry run ruff check ."
