--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.11"
-zenml = { version = "0.58.1", extras = ["server"] }
+zenml = { version = "0.63.0", extras = ["server"] }
 pymongo = "^4.6.2"
-pydantic = "^1.9.0"
+pydantic = "^2.7.0"
+pydantic-settings = "^2.2.1"
 click = "^8.0.1"
 loguru = "^0.7.2"
 rich = "^13.7.1"
@@ -25,11 +26,11 @@ jmespath = "^1.0.1"
 # Feature engineering
 qdrant-client = "^1.8.0"
 unstructured = "^0.12.0"
-langchain = "^0.1.13"
+langchain = "^0.2.11"
 sentence-transformers = "^2.6.1"
 
 # RAG
-langchain-openai = "^0.1.3"
+langchain-openai = "^0.1.19"
 jinja2 = "^3.1.4"
 tiktoken = "^0.7.0"
 fake-useragent = "^1.5.1"
