--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,16 @@ fake-useragent = "^1.5.1"
 sagemaker-huggingface-inference-toolkit = "^2.4.0"
 sagemaker = "^2.226.1"
 
+# LLM related
+accelerate = "0.33.0"
+torch = "2.4.0"
+transformers = "4.43.3"
+datasets = "2.19.0"
+peft = "0.12.0"
+trl = "0.9.6"
+bitsandbytes = "0.42"
+comet-ml = "3.44.3"
+
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.9"
 pre-commit = "^3.7.1"
@@ -45,7 +55,6 @@ pytest = "^8.2.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
 
 # Poe the Poet Tasks
 
