--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,11 @@ LINKEDIN_USERNAME = "str"
 LINKEDIN_PASSWORD = "str"
 
 # OpenAI API Config
-OPENAI_MODEL_ID = "gpt-3.5-turbo"
+OPENAI_MODEL_ID = "gpt-4o-mini"
 OPENAI_API_KEY = "str"
+
+# Huggingface API Config
+HUGGINGFACE_ACCESS_TOKEN = "str"
 
 # RAG
 RAG_MODEL_DEVICE = "cpu"
