--- a/configs/digital_data_etl_alex_vesa.yaml
+++ b/configs/digital_data_etl_alex_vesa.yaml
@@ -1,4 +1,7 @@
-
+settings:
+  docker:
+    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-voplyj:latest
+    skip_build: True
 
 parameters:
   user_full_name: Alex Vesa # [First Name(s)] [Last Name]
