--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,12 @@ selenium = "^4.21.0"
 webdriver-manager = "^4.0.1"
 beautifulsoup4 = "^4.12.3"
 jmespath = "^1.0.1"
+chromedriver-autoinstaller = "^0.6.4"
 
 # Feature engineering
 qdrant-client = "^1.8.0"
 langchain = "^0.2.11"
 sentence-transformers = "^2.6.1"
-datasets = "2.20.0"
 
 # RAG
 langchain-openai = "^0.1.19"
@@ -35,12 +35,20 @@ jinja2 = "^3.1.4"
 tiktoken = "^0.7.0"
 fake-useragent = "^1.5.1"
 langchain-community = "^0.2.11"
-chromedriver-autoinstaller = "^0.6.4"
+
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.9"
 pre-commit = "^3.7.1"
 pytest = "^8.2.2"
+
+
+[tool.poetry.group.aws.dependencies]
+sagemaker = ">=2.117.0"
+s3fs = ">2022.3.0"
+aws-profile-manager = "^0.7.3"
+kubernetes = "^30.1.0"
+
 
 [build-system]
 requires = ["poetry-core"]
