--- a/configs/feature_engineering.yaml
+++ b/configs/feature_engineering.yaml
@@ -1,3 +1,8 @@
+settings:
+  docker:
+    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-voplyj:latest
+    skip_build: True
+
 parameters:
   author_full_names:
     - Alex Vesa
