--- a/configs/digital_data_etl_alex_vesa.yaml
+++ b/configs/digital_data_etl_alex_vesa.yaml
@@ -2,6 +2,8 @@ settings:
   docker:
     parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-voplyj:latest
     skip_build: True
+  orchestrator.aws-stack-skgh:
+    synchronous: false
 
 parameters:
   user_full_name: Alex Vesa # [First Name(s)] [Last Name]
