--- a/configs/digital_data_etl_maxime_labonne.yaml
+++ b/configs/digital_data_etl_maxime_labonne.yaml
@@ -2,7 +2,9 @@ settings:
   docker:
     parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-voplyj:latest
     skip_build: True
-
+  orchestrator.aws-stack-skgh:
+    synchronous: false
+    
 parameters:
   user_full_name: Maxime Labonne # [First Name(s)] [Last Name]
   links:
