--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.11"
-zenml = { version = "0.63.0", extras = ["server"] }
+zenml = { version = "0.64.0", extras = ["server"] }
 pymongo = "^4.6.2"
 pydantic = "^2.7.0"
 pydantic-settings = "^2.2.1"
@@ -63,7 +63,7 @@ build-backend = "poetry.core.masonry.api"
 export-settings-to-zenml = "python run.py --export-settings"
 delete-settings-zenml = "zenml secret delete settings"
 
-# Pipelines
+# Data pipelines
 run-digital-data-etl-alex = "python run.py --run-etl --no-cache --etl-config-filename digital_data_etl_alex_vesa.yaml"
 run-digital-data-etl-maxime = "python run.py --run-etl --no-cache --etl-config-filename digital_data_etl_maxime_labonne.yaml"
 run-digital-data-etl-paul = "python run.py --run-etl --no-cache --etl-config-filename digital_data_etl_paul_iusztin.yaml"
@@ -72,17 +72,14 @@ run-digital-data-etl = [
     "run-digital-data-etl-maxime",
     "run-digital-data-etl-paul",
 ]
-
 run-feature-engineering-pipeline = "python run.py --no-cache --run-feature-engineering"
 run-generate-instruct-datasets-pipeline = "python run.py --no-cache --run-generate-instruct-datasets"
-run-preprocessing-pipeline = [
-    "run-digital-data-etl",
-    "run-feature-engineering-pipeline",
-    "run-generate-instruct-datasets-pipeline",
-]
-run-end-to-end-data-pipeline = "python run.py --no-cache --run-end-to-end-data"
+run-end-to-end-data-pipeline = "python -m tools.run --no-cache --run-end-to-end-data"
+
+# Utility pipelines
 run-export-artifact-to-json-pipeline = "python run.py --no-cache --run-export-artifact-to-json"
 
+# Training pipelines
 run-training-pipeline = "python run.py --no-cache --run-training"
 
 # Infrastructure
@@ -103,7 +100,7 @@ set-aws-stack = "zenml stack set aws-stack"
 
 # Docker
 build-docker-image = "docker buildx build --platform linux/amd64 -t llmtwin -f Dockerfile ."
-run-docker-digital-data-etl = "docker run --rm --network host --shm-size=2g --env-file .env llmtwin poetry poe run-digital-data-etl"
+run-docker-end-to-end-data-pipeline = "docker run --rm --network host --shm-size=2g --env-file .env llmtwin poetry poe --no-cache --run-end-to-end-data"
 bash-docker-container = "docker run --rm -it --network host --env-file .env llmtwin bash"
 
 # QA
