--- a/configs/end_to_end_data.yaml
+++ b/configs/end_to_end_data.yaml
@@ -1,8 +1,8 @@
 settings:
   docker:
-    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-voplyj:latest
+    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-rlwlcs:latest
     skip_build: True
-  orchestrator.aws-stack-skgh:
+  orchestrator.aws-stack:
     synchronous: false
 
 parameters:
