--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,27 +60,27 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 # Setup
-export-settings-to-zenml = "python run.py --export-settings"
+export-settings-to-zenml = "python -m tools.run --export-settings"
 delete-settings-zenml = "zenml secret delete settings"
 
 # Data pipelines
-run-digital-data-etl-alex = "python run.py --run-etl --no-cache --etl-config-filename digital_data_etl_alex_vesa.yaml"
-run-digital-data-etl-maxime = "python run.py --run-etl --no-cache --etl-config-filename digital_data_etl_maxime_labonne.yaml"
-run-digital-data-etl-paul = "python run.py --run-etl --no-cache --etl-config-filename digital_data_etl_paul_iusztin.yaml"
+run-digital-data-etl-alex = "python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_alex_vesa.yaml"
+run-digital-data-etl-maxime = "python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_maxime_labonne.yaml"
+run-digital-data-etl-paul = "python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_paul_iusztin.yaml"
 run-digital-data-etl = [
     "run-digital-data-etl-alex",
     "run-digital-data-etl-maxime",
     "run-digital-data-etl-paul",
 ]
-run-feature-engineering-pipeline = "python run.py --no-cache --run-feature-engineering"
-run-generate-instruct-datasets-pipeline = "python run.py --no-cache --run-generate-instruct-datasets"
+run-feature-engineering-pipeline = "python -m tools.run --no-cache --run-feature-engineering"
+run-generate-instruct-datasets-pipeline = "python -m tools.run --no-cache --run-generate-instruct-datasets"
 run-end-to-end-data-pipeline = "python -m tools.run --no-cache --run-end-to-end-data"
 
 # Utility pipelines
-run-export-artifact-to-json-pipeline = "python run.py --no-cache --run-export-artifact-to-json"
+run-export-artifact-to-json-pipeline = "python -m tools.run --no-cache --run-export-artifact-to-json"
 
 # Training pipelines
-run-training-pipeline = "python run.py --no-cache --run-training"
+run-training-pipeline = "python -m tools.run --no-cache --run-training"
 
 # Infrastructure
 local-docker-infrastructure-up = "docker compose up -d"
@@ -97,6 +97,7 @@ local-infrastructure-down = [
 ]
 set-local-stack = "zenml stack set default"
 set-aws-stack = "zenml stack set aws-stack"
+set-asynchronous-runs = "zenml orchestrator update aws-stack --synchronous=False"
 
 # Docker
 build-docker-image = "docker buildx build --platform linux/amd64 -t llmtwin -f Dockerfile ."
