--- a/configs/feature_engineering.yaml
+++ b/configs/feature_engineering.yaml
@@ -2,7 +2,7 @@ settings:
   docker:
     parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-rlwlcs:latest
     skip_build: True
-  orchestrator.aws-stack:
+  orchestrator.sagemaker:
     synchronous: false
     
 parameters:
