feature: Configure everything from the settings object

--- a/.env.example
+++ b/.env.example
@@ -12,39 +12,12 @@ HUGGINGFACE_ACCESS_TOKEN=str
 # RAG
 RAG_MODEL_DEVICE=cpu
 
-
-# Huggingface
-HUGGING_FACE_HUB_TOKEN="str"
-
-#SAGEMAKER
-SAGEMAKER_ENDPOINT_INFERENCE=llm-v2-llm-endpoint
-SAGEMAKER_MODEL_INFERENCE=huggingface-pytorch-tgi-inference-2024-05-13-10-50-05-168
-SAGEMAKER_ENDPOINT_CONFIG_INFERENCE=llm-v2-llm-endpoint
-SAGEMAKER_INFERENCE_COMPONENT_INFERENCE=None
-
-# SAGEMAKER EXECUTION ROLE
-ARN_ROLE="str"
-
-
-# SAGEMAKER INFERENCE 
-TEMPERATURE_INFERENCE=0.1
-TOP_P_INFERENCE=0.1
-MAX_NEW_TOKENS_INFERENCE=5000
-RETURN_FULL_TEXT=False
-
-
-# Deploy Parameters
-SM_NUM_GPUS=4
-MAX_INPUT_LENGTH=25000
-MAX_TOTAL_TOKENS=32000
-MAX_BATCH_TOTAL_TOKENS=32000
-HF_MODEL_ID=mistralai/Mistral-7B-Instruct-v0.2
-GPU_INSTANCE_TYPE='ml.g5.12xlarge'
-
 # AWS Credentials
-AWS_ACCESS_KEY="str"
-AWS_SECRET_KEY="str"
+AWS_ACCESS_KEY=str
+AWS_SECRET_KEY=str
 
+# SAGEMAKER Execution Role
+ARN_ROLE=str
 
 # LinkedIn Credentials
 LINKEDIN_USERNAME=str
