--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,9 +126,9 @@ bash-docker-container = "docker run --rm -it --network host --env-file .env llmt
 ## SageMaker
 create-sagemaker-role = "poetry run python llm_engineering/infrastructure/aws/roles/create_sagemaker_role.py"
 create-sagemaker-execution-role = "poetry run python llm_engineering/core/aws/roles/create_execution_role.py"
-deploy-inference-endpoint = "poetry run python llm_engineering/infrastructure/aws/deploy/huggingface/run.py"
+deploy-inference-endpoint = "poetry run python -m llm_engineering.infrastructure.aws.deploy.huggingface.run"
 test-sagemaker-endpoint = "poetry run python -m llm_engineering.model.inference.test"
-delete-inference-endpoint = "poetry run python llm_engineering/infrastructure/aws/deploy/delete_inference_endpoint.py"
+delete-inference-endpoint = "poetry run python llm_engineering/infrastructure/aws/deploy/delete_sagemaker_endpoint.py"
 
 # QA
 lint-check = "poetry run ruff check ."
