refactor: Remove unused code

--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,10 @@ HUGGINGFACE_ACCESS_TOKEN=str
 RAG_MODEL_DEVICE=cpu
 
 # AWS Credentials
+AWS_ARN_ROLE=str
 AWS_ACCESS_KEY=str
 AWS_SECRET_KEY=str
-
-# SAGEMAKER Execution Role
-ARN_ROLE=str
+AWS_REGION=eu-central-1
 
 # LinkedIn Credentials
 LINKEDIN_USERNAME=str
