--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,9 @@ run-export-artifact-to-json-pipeline = "python -m tools.run --no-cache --run-exp
 # Training pipelines
 run-training-pipeline = "python -m tools.run --no-cache --run-training"
 
+# Miscellanous tools
+call-rag-retrieval-module = "python -m tools.rag"
+
 # Inference ML service
 run-inference-ml-service = "uvicorn tools.ml_service:app --host 0.0.0.0 --port 8000 --reload"
 call-inference-ml-service = "curl -X POST 'http://127.0.0.1:8000/rag' -H 'Content-Type: application/json' -d '{\"query\": \"My name is Paul Iusztin. Could you draft a LinkedIn post discussing RAG systems? I am particularly interested in how RAG works and how it is integrated with vector DBs and LLMs.\"}'"
