feat: Add dataset generation logic with prefernce support

--- a/configs/export_artifact_to_json.yaml
+++ b/configs/export_artifact_to_json.yaml
@@ -4,8 +4,10 @@ settings:
     skip_build: True
   orchestrator.sagemaker:
     synchronous: false
-    
+
 parameters:
-  artifact_names: 
-  - raw_documents
-  - cleaned_documents
+  artifact_names:
+    - raw_documents
+    - cleaned_documents
+    - instruct_datasets
+    - preference_datasets
