feat: Add pyenv file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "llm-engineering"
 version = "0.1.0"
 description = ""
-authors = ["iusztinpaul <p.e.iusztin@gmail.com>"]
+authors = ["iusztinpaul <p.b.iusztin@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
