--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# MongoDB Config
-DATABASE_HOST=mongodb://decodingml:decodingml@127.0.0.1:27017
-DATABASE_NAME=twin
+# --- Required settings even when working locally. ---
 
 # OpenAI API Config
 OPENAI_MODEL_ID=gpt-4o-mini
@@ -9,15 +7,23 @@ OPENAI_API_KEY=str
 # Huggingface API Config
 HUGGINGFACE_ACCESS_TOKEN=str
 
-# RAG
-RAG_MODEL_DEVICE=cpu
+# Comet ML (during training) 
+COMET_API_KEY=str
+COMET_WORKSPACE=llm-engineers-handbook
 
-# AWS Credentials
+# --- Required settings when deploying the code. ---
+# --- Otherwise, default values values work fine. ---
+
+# MongoDB database
+DATABASE_HOST="mongodb://decodingml:decodingml@127.0.0.1:27017"
+
+# Qdrant vector database
+USE_QDRANT_CLOUD=false
+QDRANT_CLOUD_URL="str"
+QDRANT_APIKEY="str"
+
+# AWS Authentication
 AWS_ARN_ROLE=str
+AWS_REGION=eu-central-1
 AWS_ACCESS_KEY=str
 AWS_SECRET_KEY=str
-AWS_REGION=eu-central-1
-
-# LinkedIn Credentials
-LINKEDIN_USERNAME=str
-LINKEDIN_PASSWORD=str
