docs: Add project structure sections

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ COMET_WORKSPACE=llm-engineers-handbook
 # --- Otherwise, default values values work fine. ---
 
 # MongoDB database
-DATABASE_HOST="mongodb://decodingml:decodingml@127.0.0.1:27017"
+DATABASE_HOST="mongodb://llm_engineering:llm_engineering@127.0.0.1:27017"
 
 # Qdrant vector database
 USE_QDRANT_CLOUD=false
