--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       options:
         max-size: 1g
     environment:
-      MONGO_INITDB_ROOT_USERNAME: "decodingml"
-      MONGO_INITDB_ROOT_PASSWORD: "decodingml"
+      MONGO_INITDB_ROOT_USERNAME: "llm_engineering"
+      MONGO_INITDB_ROOT_PASSWORD: "llm_engineering"
     ports:
       - 27017:27017
     volumes:
